# tencentcloud-cls-sdk-c

./: .gitgnore  CMakeLists.txt  Makefile  README.md
demo/: CMakeLists.txt  Makefile  log_post.c  log_search.c
src/: log_define.h  log_polymerization.c  log_producer_client.c  log_producer_client.h  log_producer_manager.c  post_logs_api.c  signature.c  utils.c  utils.h
